[gd_scene load_steps=37 format=2]

[ext_resource path="res://Assets/Art/stabbing_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Assets/SFX/squeaky.wav" type="AudioStream" id=2]
[ext_resource path="res://Scenes/UI/WinScreen.gd" type="Script" id=3]
[ext_resource path="res://Assets/UI/Fonts/dpcomic.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scenes/UI/ChangeScene.gd" type="Script" id=5]
[ext_resource path="res://Assets/Art/pentagram.png" type="Texture" id=6]
[ext_resource path="res://Assets/Music/victory_music.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Art/candle.png" type="Texture" id=8]
[ext_resource path="res://Assets/Art/crayon.png" type="Texture" id=9]

[sub_resource type="Environment" id=27]
background_mode = 4
glow_enabled = true

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 600, 600 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 600, 0, 600, 600 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1200, 0, 600, 600 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1800, 0, 600, 600 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2400, 0, 600, 600 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 3000, 0, 600, 600 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 3600, 0, 600, 600 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 4200, 0, 600, 600 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 4800, 0, 600, 600 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 5400, 0, 600, 600 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 6000, 0, 600, 600 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 6600, 0, 600, 600 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 7200, 0, 600, 600 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 7800, 0, 600, 600 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 8400, 0, 600, 600 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 9000, 0, 600, 600 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 9600, 0, 600, 600 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 10200, 0, 600, 600 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 10800, 0, 600, 600 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 11400, 0, 600, 600 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 12000, 0, 600, 600 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 12600, 0, 600, 600 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 13200, 0, 600, 600 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 13800, 0, 600, 600 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": false,
"name": "stab",
"speed": 10.0
} ]

[sub_resource type="DynamicFont" id=26]
size = 128
use_mipmaps = true
font_data = ExtResource( 4 )

[node name="WinScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 27 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.141176, 0.141176, 0.141176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 512, 300 )
frames = SubResource( 1 )
animation = "stab"

[node name="Crayon" type="Sprite" parent="AnimatedSprite"]
position = Vector2( 416, 244 )
rotation = -1.74533
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="Pentagram" type="Sprite" parent="AnimatedSprite"]
show_behind_parent = true
position = Vector2( -103.416, 224.908 )
scale = Vector2( 1, 0.3 )
texture = ExtResource( 6 )

[node name="Candle" type="Sprite" parent="AnimatedSprite"]
show_behind_parent = true
position = Vector2( -512, 20 )
texture = ExtResource( 8 )

[node name="Candle2" type="Sprite" parent="AnimatedSprite"]
show_behind_parent = true
position = Vector2( -96, -76 )
texture = ExtResource( 8 )

[node name="Candle3" type="Sprite" parent="AnimatedSprite"]
show_behind_parent = true
position = Vector2( 384, 52 )
texture = ExtResource( 8 )

[node name="Candle4" type="Sprite" parent="AnimatedSprite"]
show_behind_parent = true
position = Vector2( 224, 340 )
texture = ExtResource( 8 )

[node name="Candle5" type="Sprite" parent="AnimatedSprite"]
show_behind_parent = true
position = Vector2( -448, 340 )
texture = ExtResource( 8 )

[node name="StabWait" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
autostart = true

[node name="V" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="V"]
margin_left = 317.0
margin_top = 199.0
margin_right = 707.0
margin_bottom = 315.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 26 )
text = "You Win"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeScene" type="Button" parent="V"]
margin_left = 445.0
margin_top = 365.0
margin_right = 579.0
margin_bottom = 401.0
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Main Menu"
flat = true
script = ExtResource( 5 )
next_scene = "res://Scenes/UI/MainMenu.tscn"

[node name="SqueakSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SFX"

[node name="Tween" type="Tween" parent="."]

[node name="WinMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "Music"

[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="timeout" from="StabWait" to="AnimatedSprite" method="play" binds= [ "stab" ]]
[connection signal="finished" from="SqueakSFX" to="." method="_on_SqueakSFX_finished"]
